[project]
name = "pythontools"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
    { name = "xieyuen", email = "xieyuenol@outlook.com" }
]
license = { file = "LICENSE" }

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
